<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/my_quiz_app"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/highScoreTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/startQuizButtonId"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/highscore_0"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startQuizButtonId"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:text="@string/start_quiz"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/levelTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startQuizButtonId"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/level"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerId"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startQuizButtonId"
        android:layout_alignStart="@+id/startQuizButtonId"
        android:layout_marginStart="85dp"
        android:layout_marginTop="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/levelTextViewId"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerCategoryId"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerId"
        android:layout_alignStart="@+id/startQuizButtonId"
        android:layout_marginStart="80dp"
        android:layout_marginTop="17dp" />

</RelativeLayout>